// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component should accept a react Element as renderAs prop 1`] = `
<DocumentFragment>
  <aside
    class="menu"
  >
    <p
      class="menu-label"
    >
      General
    </p>
    <ul
      class="menu-list"
    >
      <li>
        <span>
          CustomDashboard
        </span>
      </li>
      <li>
        <span>
          CustomCustomer
        </span>
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;

exports[`Menu component should concat Menu.List to display as submenus 1`] = `
<DocumentFragment>
  <aside
    class="menu"
  >
    <p
      class="menu-label"
    >
      General
    </p>
    <ul
      class="menu-list"
    >
      <li>
        <a>
          Dashboard
        </a>
      </li>
      <li />
      <li>
        <a
          class="is-active"
        >
          Manage Your Team
        </a>
        <ul
          class="menu-list"
        >
          <li>
            <a>
              Members
            </a>
          </li>
          <li>
            <a
              class="is-active"
            >
              Plugins
            </a>
          </li>
          <li>
            <a>
              Add a member
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;

exports[`Menu component should have render all 1`] = `
<DocumentFragment>
  <aside
    class="menu"
  >
    <p
      class="menu-label"
    >
      General
    </p>
    <ul
      class="menu-list"
    >
      <li>
        <a>
          Dashboard
        </a>
      </li>
      <li>
        <a>
          Customer
        </a>
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;

exports[`Menu component should render 1`] = `
<DocumentFragment>
  <aside
    class="menu"
  >
    Content
  </aside>
</DocumentFragment>
`;

exports[`Menu component should render 2`] = `
<DocumentFragment>
  <ul
    class="menu-list"
  >
    Content
  </ul>
</DocumentFragment>
`;

exports[`Menu component should render 3`] = `
<DocumentFragment>
  <li>
    <a>
      Content
    </a>
  </li>
</DocumentFragment>
`;

exports[`Menu component should render custom item child 1`] = `
<DocumentFragment>
  <aside
    class="menu"
  >
    <p
      class="menu-label"
    >
      General
    </p>
    <ul
      class="menu-list"
    >
      <li>
        <p>
          Custom children 1
        </p>
      </li>
      <li>
        <a>
          Custom children 2
        </a>
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;
